--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -7,6 +7,15 @@ body {
   @apply bg-white;
 }
 
+input[type="date"]::-webkit-calendar-picker-indicator,
+input[type="date"]::-moz-datepicker-icon {
+  display: none;
+}
+input[type="date"] {
+  -moz-appearance: textfield; /* Firefox */
+  appearance: textfield; /* Other browsers */
+}
+
 @layer base {
   :root {
     --radius: 0.5rem;
